@@ -12,6 +12,13 @@ version 0.6.12 - available as snapshot
          'bin' was used before 'auto' was introduced
   - NEW: the format parameter of loadPopulation, loadSimulator are obsolete.
          File type will be automatically determined.
+  - NEW: the wrap files will be automatically generated if any of the source
+         files is modified. This is useful mostly for svn users.
+  - NEW: simuUtil/SaveLinkage is improved in efficiency
+  - CHG: simuUtil/SaveLinkage: if pre is True, the output is filename.pre
+         instead of filename.ped, which will be used when pre is False.
+  - CHG: fitness is implemented differently. Namely, fitness will no longer
+         be stored as shared variables.
 
 version 0.6.11 - (Rev 119) - Jan 19, 2006
   - DOC: add examples of penetrance operators to the reference manual.
